fix alignment bug on tagged page; don't center header on smallest width devices

--- a/app/assets/stylesheets/blog_post.scss
+++ b/app/assets/stylesheets/blog_post.scss
@@ -16,12 +16,21 @@
     a {
       color: transparent;
     }
+
+    @media only screen and (max-width : 500px) {
+      padding-top: 10px;
+      margin-left: 0;
+    }
   }
 
   time {
     color: $deemphasized;
     display: inline-block;
     vertical-align: middle;
+
+    @media only screen and (max-width : 500px) {
+      display: block;
+    }
   }
 }
 
