--- a/app/assets/stylesheets/globals.scss
+++ b/app/assets/stylesheets/globals.scss
@@ -31,7 +31,6 @@ p {
     @media only screen and (max-width : 500px) {
       width: 100%;
       display: block;
-      text-align: center;
       font-size: 36px;
 
       .logo-tada {
@@ -57,7 +56,6 @@ p {
     margin-bottom: 20px;
 
     @media only screen and (max-width : 500px) {
-      text-align: center;
       font-size: 12px;
     }
   }
@@ -81,7 +79,7 @@ p {
     padding-top: 14px;
 
     @media only screen and (max-width : 500px) {
-      margin: 0 20px;
+      margin: 0;
       width: 90%;
       padding: 0;     
     }
